# rtx2mnc

./: CMakeLists.txt  README.md  main.cpp
cmake-modules/: FindMINC.cmake
